@@ -34,3 +34,8 @@ This toolbox contains patches submitted by the following contributors:
   - loadjson crashes for sparse complex column vector.
   - Data is corrupted by savejson for sparse real row vector.
   - savejson crashes for sparse complex row vector. 
+
+- Yul Kang <yul.kang.on at gmail.com>
+  patches for svn revision 415.
+  - savejson saves an empty cell array as [] instead of null
+  - loadjson differentiates an empty struct from an empty array
